# libpulp

./: .clang-format  .gitignore  LICENSE  Makefile.am  Makefile.common  README  README.md  bootstrap  bootstrap.sh  configure.ac  configure~  libdummy.spec  libdummy_livepatch-0.1.tar.bz2  libdummy_livepatch.spec  libdummy_livepatch_1.spec  libdummy_livepatch_2.spec  libfibo.spec  libfibo_livepatch.spec  libpulp.spec  livepatch.spec  prepare.sh  rerun.sh  setup.sh
.github/workflows/: coding-style.yml  test-suite-clang.yml  test-suite-sanitizers.yml  test-suite-valgrind.yml  test-suite.yml
common/: Makefile.am  common.c  insn_queue.c
config/: .gitignore
docs/: Doxyfile.in  Makefile.am
examples/: Makefile.am  README.md
examples/cplusplus/1-class/: Makefile  README.md  a_livepatch1.cpp  a_livepatch1.dsc  class.cpp
examples/cplusplus/2-private_class/: Makefile  README.md  a_livepatch1.cpp  a_livepatch1.dsc  class.cpp
examples/cplusplus/3-indirect_call/: Makefile  README.md  a_livepatch1.cpp  a_livepatch1.dsc  class.cpp
examples/cplusplus/4-global_var/: Makefile  README.md  a_livepatch1.cpp  a_livepatch1.dsc  test.cpp
examples/cplusplus/5-queue/: Makefile  README.md  a_livepatch1.cpp  a_livepatch1.dsc  class.cpp
examples/dummy/: Makefile.am  descr1.in  descr2.in  ex1.c  ex2.c  ex3.c  ex4.c  libdummy.c  libdummy.h  libdummy_livepatch1.c  libdummy_livepatch1.in  libdummy_livepatch2.c  libdummy_livepatch2.in  patch1.c  wrapper-script
examples/dummy/livepatch1/: Makefile.am  descr.in
examples/dummy/livepatch2/: Makefile.am  descr2.in
examples/fibo/: Makefile.am  descr1.in  ex1.c  libfibo.c  libfibo_livepatch1.c  libfibo_livepatch1.in
include/: Makefile.am  config.h.in~  error.h  error_common.h  hash.h  insn_queue.h  insn_queue_lib.h  interpose.h  ld_rtld.h  minielf.h  msg_queue.h  packer.h  symbol_loader.h  terminal_colors.h  ulp.h  ulp_common.h
include/arch/powerpc64le/: arch_common.h
include/arch/x86_64/: arch_common.h  common.h
include/ulp/: alloc-internal.h  alloc.h
lib/: Makefile.am  alloc.c  error.c  gdb_interface.c  hash.c  insn_queue.c  interpose.c  libpulp.versions  minielf.c  msg_queue.c  symbol_loader.c  test-alloc-semaphore.c  test-alloc.c  trm.S  ulp.c  ulp_interface.S  ulp_prologue.S
lib/arch/powerpc64le/: .patch.c.swo  common.s  patch.c  ulp_interface.S  ulp_prologue.S
lib/arch/x86_64/: patch.c  ulp_interface.S
libdummy-0.1/: Makefile.am  build-libdummy.sh
libdummy-0.1/ex_1/: Makefile.am  weak.c
libdummy-0.1/ex_2/: Makefile.am
libdummy-0.1/ex_3/: Makefile.am
libdummy-0.1/ex_4/: Makefile.am  ex4.c
libdummy-0.1/libdummy/: Makefile.am  libdummy.h
libdummy-0.1/livepatch1/: Makefile.am
libdummy-0.1/livepatch2/: Makefile.am
libdummy_livepatch-0.1/: build-livepatch.sh  patch1.sh
libdummy_livepatch-0.1/src/patch/: descr.txt  patch.c
libdummy_livepatch_1-0.1/: Makefile.am  build-livepatch.sh  descr.txt
libdummy_livepatch_2-0.1/: Makefile.am  build-livepatch.sh
libdummy_livepatch_2-0.1/src/patch/: descr.txt  patch.c
libfibo-0.1/: Makefile.am  build-libfibo.sh  ex1.c
libfibo-0.1/ex_1/: Makefile.am
libfibo-0.1/libfibo/: Makefile.am
libfibo-0.1/livepatch1/: Makefile.am
libfibo_livepatch-0.1/: Makefile.am  build-livepatch.sh  descr.txt  patch.c
libpulp-0.1/: .gitignore  .gitmodules  Makefile.am
libpulp-0.1/binutils-ulp/bfd/: elflink.c  elfxx-x86.c  elfxx-x86.h  ulp.h
libpulp-0.1/include/: packer.h  ulp.h  ulp_common.h
libpulp-0.1/lib/: Makefile.am  trm.S  ulp.c  ulp_interface.S  ulp_prologue.S
libpulp-0.1/rpm/: build-binutils.sh  build-examples.sh  build-lib.sh  patch1.sh
libpulp-0.1/src/ex_1/: ex1.c
libpulp-0.1/src/ex_2/: ex2.c
libpulp-0.1/src/ex_3/: ex3.c
libpulp-0.1/src/libdummy/: libdummy.c  libdummy.h
libpulp-0.1/tools/: Makefile.am
libpulp-0.1/tools/trigger/: Makefile.am  check.c  introspection.c  introspection.h  ptrace.c  ptrace.h  trigger.c  trigger.h
man/: Makefile.am  libpulp.7  ulp.1  ulp_check.1  ulp_dump.1  ulp_packer.1  ulp_post.1  ulp_reverse.1  ulp_trigger.1
patches/binutils/: add-ulp-section.diff
patches/gcc/: fix-pfe-section-flags.diff
patches/glibc/: 0001-Expose-the-status-of-locks-used-in-malloc-and-dlopen.patch  0002-Non-ABI-compliant-__tls_get_addr-for-libpulp.patch  Non-ABI-compliant-__tls_get_addr-for-libpulp.patch  add-ulp-sources.diff  ulp-checks.patch
scripts/: Makefile.am  build_libdummy.sh  build_libfibo.sh  build_libpulp.sh  build_lp_libdummy.sh  collect.sh  common_lib.sh  dispatcher.lua  extract_function.sh  glibc.sh  prepare.sh  rerun.sh  setup.sh  setup_package.sh  ulp_apply.sh
tests/: Makefile.am  README.Makefile.am  access.c  access.py  access2.py  asunsafe_conversion.c  asunsafe_conversion.py  block_mprotect.c  blocked.c  blocked.py  buildid.c  buildid.py  cancel.c  cancel.py  chroot.c  chroot.py  comments.c  comments.py  constructor-template.c  constructor.c  constructor.py  contract.c  contract.py  critical_section_verification.c  critical_section_verification.py  deadlock.c  deadlock.py  dlopen.c  dlopen.py  dlsym.c  dlsym_lock.py  dozens.c  dozens.h  endbr64.py  exception_handling.cc  exception_handling.py  glibc_private.py  group_disable.py  hidden.py  hundreds.c  (+150 more)
tests/fuz/: 1  2  3  4  5  6  7  README.md
tools/: Makefile.am  arguments.h  buildid.c  check.c  check.h  dispatcher.lua  dump.c  dump.h  dynsym_gate.c  elf-extra.c  elf-extra.h  extract.c  extract.h  insn_queue.c  insn_queue_tools.h  introspection.c  introspection.h  livepatchable.c  livepatchable.h  md4.c  md4.h  messages.c  messages.h  packer.c  packer.h  patches.c  patches.h  pcqueue.c  pcqueue.h  post.c  post.h  ptrace.c  ptrace.h  revert.c  revert.h  set_patchable.c  set_patchable.h  setup_package.sh  trigger.c  trigger.h  (+2 more)
tools/arch/powerpc64le/: post-arch.c
tools/arch/x86_64/: post-arch.c
tools/dispatcher/: dispatcher.lua
tools/dump/: Makefile.am  dump.c
tools/dynsym_gate/: Makefile.am  dynsym_gate.c
tools/packer/: Makefile.am  packer.c  revert.c
tools/trigger/: Makefile.am  check.c  introspection.c  introspection.h  ptrace.c  ptrace.h  trigger.c  ulp.c
(+6 files in other folders)
